--- a/css/style.css
+++ b/css/style.css
@@ -12,6 +12,7 @@ html, body, * {
 	border: 0;
 	margin: 0;
 	font-family: 'Raleway', sans-serif;
+	color: #1A2F31;
 }
 
 /*THIS IS OUR BACKGROUND IMAGE*/
@@ -40,7 +41,7 @@ div.nav {
 
 /*NAVBAR LINK HOVER*/
 a.navbar-link:hover {
-	color: #5C9EAD;
+	color: #1E3F41;
 }
 
 /*UNORDERED NAVBAR LIST*/
@@ -83,7 +84,7 @@ h1 {
 /*BUTTON*/
 a.button { 
 	display: block;
-	background-color: #5C9EAD;
+	background-color: #1E3F41;
 	color: #EDF5FC;
 	width: 100%;
 	height: 50px;
@@ -94,6 +95,6 @@ a.button {
 
 a.button:hover {
 	background-color: #232325;
-	color: #5C9EAD;
+	color: #1E3F41;
 	border: 1px solid #5C9EAD;
 }
