--- a/css/style.css
+++ b/css/style.css
@@ -3,7 +3,6 @@
 /*COLOR PALETTE*/
 /*my black		#2F2F2F*/
 /*my grey		#rgba(184, 197, 214, 1)*/
-/*my blue 		#5C9EAD*/
 /*my green		#1E3F41*/
 /*my mint 		#D7EBBA*/
 
@@ -57,7 +56,7 @@ div.section {
 	/*	position: absolute;
 	top: 36%;
 	left: 41%;*/
-	width: 400px;
+	width: 450px;
 	margin: 0 auto;
 	margin-top: 10px;
 	padding: 30px;
@@ -73,6 +72,8 @@ div.banner{
 /*CONTENT*/
 div.content {
 	background-color: rgba(184, 197, 214, .75);
+	padding-bottom: 30px;
+	line-height: 1.6;
 }
 
 /*BANNER STYLE*/
